# llmlit

./: .gitignore  Dockerfile  RAEDME.md  README.md  deploy.yaml  main.py  pyproject.toml  settings.py
config/: model.py
db/: milvus.py  mysql.py
deploy/: prod.yaml
model/: item.py
router/: account.py  disk.py
service/: disk.py
test/: disk_embedding.py  disk_milvus.py  es_export.py
utils/: __init__.py  embedding.py
